--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-REDIS_HOST=localhost
-REDIS_PORT=6379
-# GEMINI_API_KEY=AIzaSyDMMKtkszk9CCycffOE1gVstJf8ByK2-ws
-GEMINI_API_KEY = AIzaSyBao65U1wAfv7wH_xQL0gJ5KdKdftAywlk
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+GEMINI_API_KEY=AIzaSyB-8s6MMsHyyH54vi7B0Ws0MpnM4O6CUyU
+# GEMINI_API_KEY = AIzaSyBao65U1wAfv7wH_xQL0gJ5KdKdftAywlk
+# GEMINI_API_KEY = AIzaSyCsu6vOCITGazfXwh3v6kKt0fbRmk2HoAw
+
+
+# GEMINI_API_KEY = AIzaSyAEIalRaXgW3NQsNr-HD7T5DLOCyNuhApc
